Interface/styles/h-navbar.css
body{
    margin: 0;
}


.h-navbar{
     display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
}

.title-logo {
   display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.title-logo h1{
    color: var(--cor-marrom);
    font-weight: bolder;
    font-family: var(--fonte-principal); 
}

.icon-menu{
    margin: 20px;
    height: 70px;
}
.h-container-actions-itens{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

.search-input-container{
    position: relative;
  
}

.search-input-container input {
  width: 100%;
  padding: 12px 40px 12px 15px; 
  border: none;
  border-radius: 10px;
  background: var(--cor-branco-fraco);
  font-size: 18px;
  font-weight: bold;
  color: #5a4a2e;
  box-shadow: 0 4px 6px rgba(0,0,0,0.2);
}
.search-input-container input::placeholder {
  color: var(--cor-marrom);
  font-family: var(--fonte-principal);
  font-weight: bold;
  font-size: 20px;
  opacity: 80%;
}

.search-input-container img {
  position: absolute;
  right: 12px;
  top: 50%;
  transform: translateY(-50%);
  width: 30px;
  pointer-events: none; 
}

.menu-right-container{
  position: fixed;
  top: 0;
  right: -300px; 
  width: 300px;
  height: 100%;
  background-color: var(--cor-pastel);
  box-shadow: -5px 0 10px rgba(0,0,0,0.2);
  transition: 0.3s;
  z-index: 999;
}

.menu-right-container.active{
    right: 0;
}

.body-menu a{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.body-menu h1{
    text-align: center;
    font-family: var(--fonte-principal);
    color: var(--cor-marrom);
    margin-bottom: 50px;

}


.btns-menu a{
    text-decoration: none;
    color: var(--cor-marrom);
    background-color: var(--cor-pastel-escuro);
    font-family: var(--fonte-principal);
    font-weight: 700;
    font-size: 28px;
    padding: 20px;
    margin: 10px;
    border-radius: 20px;

}
.menu-header{
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
   

}

.menu-header h1{
    text-align: center;
    margin-top: 50px;
}
.menu-header img{
    height: 40px;
    margin: 0;

}

#close-menu{
    position: absolute;
    left: 15px;
    cursor: pointer;
}

#overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.5);
  opacity: 0;
  visibility: hidden;
  transition: 0.3s;
  z-index: 998;
}


#overlay.active {
  opacity: 1;
  visibility: visible;
}

